Fix link hover styles on IE11
text-decoration-color is not supported in IE

--- a/sass/includes/_research-resources.scss
+++ b/sass/includes/_research-resources.scss
@@ -32,10 +32,11 @@
 
   &__link {
     text-decoration: none;
+    transition: none;
 
     &:hover {
       text-decoration: underline;
-      text-decoration-color: $color__white;
+      color: $color__white;
     }
 
     &:focus {
